Fix alignment on offering editor learner groups

--- a/app/styles/newcomponents/session-details.scss
+++ b/app/styles/newcomponents/session-details.scss
@@ -16,4 +16,8 @@ $session-background-color: $active-background-color;
     background-color: $text-blue;
     color: $white;
   }
+
+  .offering-editor-learnergroups {
+    text-align: left;
+  }
 }
